feat(web): endpoints now support tag manipulation